--- a/index.html
+++ b/index.html
@@ -8,24 +8,27 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Inter', sans-serif; line-height: 1.6; background: #fff; color: #222; }
-    header { background: #d62828; padding: 1rem 2rem; color: #fff; position: sticky; top: 0; z-index: 999; display: flex; justify-content: space-between; align-items: center; }
-    nav a { color: #fff; margin-left: 1.5rem; text-decoration: none; font-weight: 600; }
-    .hero { background: #f8f9fa; padding: 4rem 2rem; text-align: center; }
-    .hero h1 { font-size: 2.5rem; margin-bottom: 1rem; }
-    .hero p { font-size: 1.2rem; margin-bottom: 2rem; }
-    .btn-primary { background: #d62828; color: #fff; padding: 0.8rem 1.5rem; border: none; font-weight: bold; cursor: pointer; border-radius: 5px; }
-    .section { padding: 4rem 2rem; max-width: 1000px; margin: auto; }
-    .section h2 { font-size: 2rem; margin-bottom: 1rem; }
-    .step-box { display: flex; flex-direction: column; gap: 1rem; margin-top: 2rem; }
-    .why-us ul { list-style-type: disc; padding-left: 2rem; }
-    .form-section input, .form-section textarea { width: 100%; padding: 0.8rem; margin-bottom: 1rem; border: 1px solid #ccc; border-radius: 5px; }
-    .form-section form { background: #f1f1f1; padding: 2rem; border-radius: 10px; }
-    .testimonials blockquote { margin-bottom: 1rem; padding-left: 1rem; border-left: 4px solid #d62828; }
-    footer { background: #222; color: #eee; padding: 2rem; text-align: center; font-size: 0.9rem; }
-    @media(min-width: 768px) {
+    body { font-family: 'Inter', sans-serif; line-height: 1.6; background: #fff; color: #222; font-size: 16px; }
+    header { background: #d62828; padding: 1rem; color: #fff; position: sticky; top: 0; z-index: 999; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; }
+    nav a { color: #fff; margin: 0.5rem 1rem 0.5rem 0; text-decoration: none; font-weight: 600; display: inline-block; }
+    .hero { background: #f8f9fa; padding: 3rem 1rem; text-align: center; }
+    .hero h1 { font-size: 2rem; margin-bottom: 1rem; }
+    .hero p { font-size: 1.1rem; margin-bottom: 2rem; }
+    .btn-primary { background: #d62828; color: #fff; padding: 1rem 1.5rem; border: none; font-weight: bold; cursor: pointer; border-radius: 5px; font-size: 1rem; width: 100%; max-width: 300px; }
+    .section { padding: 3rem 1rem; max-width: 1000px; margin: auto; }
+    .section h2 { font-size: 1.8rem; margin-bottom: 1rem; text-align: center; }
+    .step-box { display: flex; flex-direction: column; gap: 2rem; margin-top: 2rem; }
+    .step-box div { background: #f1f1f1; padding: 1rem; border-radius: 10px; text-align: center; }
+    .why-us ul { list-style-type: disc; padding-left: 1.5rem; font-size: 1rem; }
+    .form-section input, .form-section textarea { width: 100%; padding: 1rem; margin-bottom: 1rem; border: 1px solid #ccc; border-radius: 5px; font-size: 1rem; }
+    .form-section form { background: #f9f9f9; padding: 2rem; border-radius: 10px; }
+    .testimonials blockquote { margin-bottom: 1rem; padding-left: 1rem; border-left: 4px solid #d62828; font-style: italic; }
+    footer { background: #222; color: #eee; padding: 2rem 1rem; text-align: center; font-size: 0.9rem; }
+    @media (min-width: 768px) {
+      .hero h1 { font-size: 2.5rem; }
       .step-box { flex-direction: row; justify-content: space-between; }
       .step-box div { width: 30%; }
+      .btn-primary { width: auto; }
     }
   </style>
 </head>
