--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="Sell your house fast for cash. No fees, no repairs. QuickCashOfferNow makes it easy." />
-  <title>QuickCashOfferNow.com | Sell Your House Fast</title>
+  <meta name="description" content="Sell your house fast for cash. No fees, no repairs. QuickCash makes it easy." />
+  <title>QuickCash | Sell Your House Fast</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font-family: 'Inter', sans-serif; line-height: 1.6; background: #fff; color: #222; font-size: 16px; }
-    header { background: #d62828; padding: 1rem; color: #fff; position: sticky; top: 0; z-index: 999; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; }
+    header { background: #d62828; padding: 1rem; color: #fff; position: sticky; top: 0; z-index: 999; display: flex; align-items: center; flex-wrap: wrap; justify-content: space-between; }
+    header img { height: 50px; }
     nav a { color: #fff; margin: 0.5rem 1rem 0.5rem 0; text-decoration: none; font-weight: 600; display: inline-block; }
     .hero { background: #f8f9fa; padding: 3rem 1rem; text-align: center; }
     .hero h1 { font-size: 2rem; margin-bottom: 1rem; }
@@ -35,7 +36,7 @@
 <body>
 
   <header>
-    <div><strong>QuickCashOfferNow</strong></div>
+    <img src="logo.png" alt="QuickCash logo" />
     <nav>
       <a href="#how">How It Works</a>
       <a href="#why">Why Us</a>
@@ -69,7 +70,7 @@
   </section>
 
   <section class="section why-us" id="why">
-    <h2>Why Choose QuickCashOfferNow?</h2>
+    <h2>Why Choose QuickCash?</h2>
     <ul>
       <li>No cleaning, staging, or repairs needed</li>
       <li>We pay all closing costs</li>
@@ -105,7 +106,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 QuickCashOfferNow.com | All rights reserved</p>
+    <p>&copy; 2025 QuickCash.com | All rights reserved</p>
     <p><a href="#" style="color: #ccc;">Privacy Policy</a> | <a href="#" style="color: #ccc;">Terms of Use</a></p>
   </footer>
 
