--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     header { background: #d62828; padding: 1rem; color: #fff; position: sticky; top: 0; z-index: 999; display: flex; align-items: center; flex-wrap: wrap; justify-content: space-between; }
     header img { height: 50px; }
     nav a { color: #fff; margin: 0.5rem 1rem 0.5rem 0; text-decoration: none; font-weight: 600; display: inline-block; }
-    .hero { background: #f8f9fa; padding: 3rem 1rem; text-align: center; }
+    .hero { background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('background.jpg') center center / cover no-repeat; padding: 3rem 1rem; text-align: center; color: #fff; text-shadow: 1px 1px 3px rgba(0,0,0,0.7); }
     .hero h1 { font-size: 2rem; margin-bottom: 1rem; }
     .hero p { font-size: 1.1rem; margin-bottom: 2rem; }
     .btn-primary { background: #d62828; color: #fff; padding: 1rem 1.5rem; border: none; font-weight: bold; cursor: pointer; border-radius: 5px; font-size: 1rem; width: 100%; max-width: 300px; }
