--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Inter', sans-serif; line-height: 1.6; background-image: url('background.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center; background-attachment: fixed; color: #222; font-size: 16px; }
+    body { font-family: 'Inter', sans-serif; line-height: 1.6; background: #fff; color: #222; font-size: 16px; }
     header { background: #d62828; padding: 1rem; color: #fff; position: sticky; top: 0; z-index: 999; display: flex; align-items: center; flex-wrap: wrap; justify-content: space-between; }
     header img { height: 50px; }
     nav a { color: #fff; margin: 0.5rem 1rem 0.5rem 0; text-decoration: none; font-weight: 600; display: inline-block; }
