--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
     header { background: #d62828; padding: 1rem; color: #fff; position: sticky; top: 0; z-index: 999; display: flex; align-items: center; flex-wrap: wrap; justify-content: space-between; }
     header img { height: 50px; }
     nav a { color: #fff; margin: 0.5rem 1rem 0.5rem 0; text-decoration: none; font-weight: 600; display: inline-block; }
-    .hero { background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('background.jpg') center center / cover no-repeat; padding: 3rem 1rem; text-align: center; color: #fff; text-shadow: 1px 1px 3px rgba(0,0,0,0.7); }
-    .hero h1 { font-size: 2rem; margin-bottom: 1rem; }
-    .hero p { font-size: 1.1rem; margin-bottom: 2rem; }
+    .hero {
+      background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+                  url('background.jpg') center center / cover no-repeat;
+      padding: 3rem 1rem;
+      text-align: center;
+      color: #fff;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.7);
+    }
     .btn-primary { background: #d62828; color: #fff; padding: 1rem 1.5rem; border: none; font-weight: bold; cursor: pointer; border-radius: 5px; font-size: 1rem; width: 100%; max-width: 300px; }
     .section { padding: 3rem 1rem; max-width: 1000px; margin: auto; }
     .section h2 { font-size: 1.8rem; margin-bottom: 1rem; text-align: center; }
@@ -22,7 +27,7 @@
     .step-box div { background: #f1f1f1; padding: 1rem; border-radius: 10px; text-align: center; }
     .why-us ul { list-style-type: disc; padding-left: 1.5rem; font-size: 1rem; }
     .form-section input, .form-section textarea { width: 100%; padding: 1rem; margin-bottom: 1rem; border: 1px solid #ccc; border-radius: 5px; font-size: 1rem; }
-    .form-section form { background: #f9f9f9; padding: 2rem; border-radius: 10px; }
+    .form-section form { background: #ffffffd9; padding: 2rem; border-radius: 10px; }
     .testimonials blockquote { margin-bottom: 1rem; padding-left: 1rem; border-left: 4px solid #d62828; font-style: italic; }
     footer { background: #222; color: #eee; padding: 2rem 1rem; text-align: center; font-size: 0.9rem; }
     @media (min-width: 768px) {
@@ -82,7 +87,7 @@
 
   <section class="section form-section" id="form">
     <h2>Get Your Free, No-Obligation Cash Offer</h2>
-    <form action="https://hooks.zapier.com/hooks/catch/your-webhook-id/" method="POST">
+    <form action="https://hooks.zapier.com/hooks/catch/22974297/27f3v9w/" method="POST">
       <input type="text" name="name" placeholder="Your Full Name" required />
       <input type="text" name="address" placeholder="Property Address" required />
       <input type="tel" name="phone" placeholder="Phone Number" required />
