--- a/index.html
+++ b/index.html
@@ -8,75 +8,94 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f8f8f8;
-            color: #333;
-            padding: 20px;
+            background: #f9f9f9;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+        header {
+            background: #083D77;
+            color: white;
+            padding: 1em 0;
+        }
+        section {
+            padding: 2em;
         }
         form {
             background: white;
-            padding: 20px;
-            max-width: 600px;
-            margin: auto;
+            padding: 2em;
+            margin: 2em auto;
+            width: 90%;
+            max-width: 500px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
-        label {
-            display: block;
-            margin-top: 15px;
-        }
         input, textarea {
             width: 100%;
-            padding: 10px;
-            margin-top: 5px;
+            padding: 0.75em;
+            margin: 0.5em 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
         }
         button {
-            margin-top: 20px;
-            padding: 10px;
-            width: 100%;
-            background-color: #27ae60;
-            color: white;
+            background: #FF9900;
             border: none;
-            font-size: 16px;
+            color: white;
+            padding: 1em;
+            font-size: 1em;
+            border-radius: 4px;
             cursor: pointer;
         }
-        .disclaimer {
-            font-size: 12px;
-            color: #666;
-            margin-top: 10px;
+        button:hover {
+            background: #e68900;
+        }
+        .checkbox-container {
+            text-align: left;
+            margin: 1em 0;
+            font-size: 0.9em;
+        }
+        footer {
+            background: #083D77;
+            color: white;
+            padding: 1em 0;
+            font-size: 0.8em;
+        }
+        a {
+            color: #FF9900;
         }
     </style>
 </head>
 <body>
 
-<h1 style="text-align:center;">Quick Cash Offer Now</h1>
+<header>
+    <h1>Quick Cash Offer Now</h1>
+</header>
 
-<form action="https://hooks.zapier.com/hooks/catch/22974297/27f3v9w/" method="POST">
-    <label for="name">Name</label>
-    <input type="text" name="name" required>
+<section>
+    <h2>Get a Fast, Fair Offer on Your Property</h2>
+    <form action="#" method="POST">
+        <input type="text" name="name" placeholder="Your Full Name" required>
+        <input type="tel" name="phone" placeholder="Your Phone Number" required>
+        <input type="email" name="email" placeholder="Your Email Address" required>
+        <textarea name="address" placeholder="Property Address" rows="4" required></textarea>
 
-    <label for="email">Email</label>
-    <input type="email" name="email" required>
+        <div class="checkbox-container">
+            <input type="checkbox" id="consent" name="consent" required>
+            <label for="consent">
+                I agree to the <a href="terms.html" target="_blank">Terms & Conditions</a> and <a href="privacy.html" target="_blank">Privacy Policy</a>.
+                By submitting this form, you consent to receive SMS messages and/or emails from Quick Cash Offer Now. 
+                To unsubscribe, follow the instructions provided in our communications. Msg & data rates may apply. 
+                Your information is secure and will not be sold to third parties. Text HELP for HELP, text STOP to cancel.
+            </label>
+        </div>
 
-    <label for="phone">Phone</label>
-    <input type="tel" name="phone" required>
+        <button type="submit">Get My Cash Offer</button>
+    </form>
+</section>
 
-    <label for="address">Property Address</label>
-    <input type="text" name="address" required>
-
-    <label for="condition">Condition of the Property</label>
-    <textarea name="condition" rows="4" required></textarea>
-
-    <label>
-        <input type="checkbox" name="consent" required>
-        I agree to the <a href="/terms.html" target="_blank">Terms & Conditions</a> and 
-        <a href="/privacy.html" target="_blank">Privacy Policy</a>. 
-        By submitting this form, you consent to receive SMS messages and/or emails from Quick Cash Offer Now. 
-        To unsubscribe, follow the instructions provided in our communications. Msg & data rates may apply for SMS. 
-        Your information is secure and will not be sold to third parties. Text HELP for HELP, text STOP to cancel.
-    </label>
-
-    <button type="submit">Get My Cash Offer</button>
-</form>
+<footer>
+    &copy; 2025 Quick Cash Offer Now. All rights reserved.
+</footer>
 
 </body>
 </html>
