--- a/privacy.html
+++ b/privacy.html
@@ -2,18 +2,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy</title>
+    <meta charset="UTF-8">
+    <title>Privacy Policy</title>
 </head>
 <body>
-  <h1>Privacy Policy</h1>
-  <p>At QuickCashOfferNow.com, we are committed to protecting your privacy. We collect personal information such as name, phone number, and property address only for the purpose of contacting you about selling your property.</p>
-
-  <p>We may send SMS messages to provide updates and offers related to your inquiry. You may opt out of these messages at any time by replying STOP.</p>
-
-  <p>We do not sell, share, or rent your personal information to third parties. All information is securely stored and used only for its intended purpose.</p>
-
-  <p>If you have any questions or concerns about our privacy practices, please contact us at <a href="mailto:Contact@quickcashoffernow.com">Contact@quickcashoffernow.com</a>.</p>
+    <h1>Privacy Policy</h1>
+    <p>Your privacy is important to us.</p>
+    <p>It is QuickCashOfferNow's policy to respect your privacy regarding any information we may collect from you across our website, QuickCashOfferNow.com, and other sites we own and operate.</p>
+    <p>... (Add more specific privacy information here, such as data use, cookie policy, third-party sharing, etc.) ...</p>
 </body>
 </html>
