--- a/terms.html
+++ b/terms.html
@@ -2,18 +2,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Terms of Service</title>
+    <meta charset="UTF-8">
+    <title>Terms and Conditions</title>
 </head>
 <body>
-  <h1>Terms of Service</h1>
-  <p>By submitting your information through QuickCashOfferNow.com, you agree to be contacted via phone, email, or SMS regarding your inquiry about selling your property.</p>
-
-  <p>Standard message and data rates may apply. You can opt out of SMS communications at any time by replying STOP. We do not guarantee purchase or offers and all inquiries are subject to further review.</p>
-
-  <p>These terms may be updated at any time. Continued use of the website and its forms constitutes acceptance of any changes.</p>
-
-  <p>For questions, please email us at <a href="mailto:Contact@quickcashoffernow.com">Contact@quickcashoffernow.com</a>.</p>
+    <h1>Terms and Conditions</h1>
+    <p>Welcome to QuickCashOfferNow.com!</p>
+    <p>These terms and conditions outline the rules and regulations for the use of QuickCashOfferNow's Website.</p>
+    <p>By accessing this website we assume you accept these terms and conditions. Do not continue to use QuickCashOfferNow.com if you do not agree to all of the terms and conditions stated on this page.</p>
+    <p>... (Add more specific terms relevant to your operations here) ...</p>
 </body>
 </html>
