--- a/louisville/index.html
+++ b/louisville/index.html
@@ -93,8 +93,28 @@
       <input type="tel" name="phone" placeholder="Phone Number" required />
       <input type="email" name="email" placeholder="Email Address" required />
       <textarea name="message" placeholder="Tell us about your situation (optional)" rows="4"></textarea>
-      <button type="submit" class="btn-primary">Get My Offer</button>
-    </form>
+      
+    <div class="form-check mt-3">
+        <input type="checkbox" class="form-check-input" id="consent" required>
+        <label class="form-check-label" for="consent">
+            I agree to the <a href="/terms.html" target="_blank">Terms of Service</a> and <a href="/privacy.html" target="_blank">Privacy Policy</a>.
+        </label>
+    </div>
+    <button type="submit"
+     class="btn-primary">Get My Offer</button>
+    
+<div style="margin-top: 20px;">
+  <label style="display: block; margin-bottom: 10px;">
+    <input type="checkbox" required />
+    I agree to the <a href="terms.html" target="_blank">Terms & Conditions</a> and
+    <a href="privacy.html" target="_blank">Privacy Policy</a>.
+    By submitting this form, you consent to receive SMS messages and/or emails from QuickCashOfferNow.
+    To unsubscribe, follow the instructions provided in our communications.
+    Msg & data rates may apply for SMS. Your information is secure and will not be sold to third parties.
+    Text HELP for HELP, text STOP to cancel.
+  </label>
+</div>
+</form>
     <script>
       document.getElementById("lead-form").addEventListener("submit", function(e) {
         e.preventDefault();
