--- a/louisville/terms.html
+++ b/louisville/terms.html
@@ -3,13 +3,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Terms and Conditions</title>
+    <title>Terms of Use | QuickCashOfferNow</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            padding: 20px;
+            max-width: 900px;
+            margin: auto;
+        }
+        h1, h2 {
+            color: #333333;
+        }
+    </style>
 </head>
 <body>
-    <h1>Terms and Conditions</h1>
-    <p>Welcome to QuickCashOfferNow.com!</p>
-    <p>These terms and conditions outline the rules and regulations for the use of QuickCashOfferNow's Website.</p>
-    <p>By accessing this website we assume you accept these terms and conditions. Do not continue to use QuickCashOfferNow.com if you do not agree to all of the terms and conditions stated on this page.</p>
-    <p>... (Add more specific terms relevant to your operations here) ...</p>
+    <h1>Terms of Use</h1>
+    <p>Welcome to QuickCashOfferNow.com. By accessing or using this website, you agree to be bound by these Terms of Use. If you do not agree with any part of these terms, please do not use our website.</p>
+
+    <h2>1. Acceptance of Terms</h2>
+    <p>By accessing and using QuickCashOfferNow.com (the "Website"), you accept and agree to be bound by the terms and provision of this agreement. In addition, when using this Website’s services, you shall be subject to any posted guidelines or rules applicable to such services.</p>
+
+    <h2>2. Modification of Terms</h2>
+    <p>We reserve the right to change, modify, or revise these Terms at any time. Any changes will become effective immediately upon being posted on the Website. Your continued use of the Website indicates your acceptance of the updated Terms.</p>
+
+    <h2>3. Use of the Website</h2>
+    <p>You agree to use the Website only for lawful purposes and in a manner that does not infringe on the rights of, restrict or inhibit anyone else’s use and enjoyment of the Website.</p>
+
+    <h2>4. Intellectual Property</h2>
+    <p>All content, including text, images, logos, and other materials on this Website are the intellectual property of QuickCashOfferNow.com unless otherwise noted. Unauthorized use of any materials may violate copyright, trademark, and other laws.</p>
+
+    <h2>5. Disclaimer of Warranties</h2>
+    <p>The Website and all content are provided on an "as is" basis without any warranties of any kind. QuickCashOfferNow.com disclaims all warranties, whether express or implied.</p>
+
+    <h2>6. Limitation of Liability</h2>
+    <p>QuickCashOfferNow.com shall not be liable for any damages arising out of or related to your use or inability to use the Website, even if we have been advised of the possibility of such damages.</p>
+
+    <h2>7. Governing Law</h2>
+    <p>These Terms shall be governed by and construed in accordance with the laws of the State of Kentucky without regard to its conflict of law principles.</p>
+
+    <h2>8. Contact Us</h2>
+    <p>If you have any questions about these Terms, please contact us at <a href="mailto:Contact@quickcashoffernow.com">Contact@quickcashoffernow.com</a>.</p>
 </body>
 </html>
