--- a/dayton/privacy.html
+++ b/dayton/privacy.html
@@ -3,12 +3,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Privacy Policy</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy | QuickCashOfferNow</title>
 </head>
-<body>
+<body style="font-family: Arial, sans-serif; max-width: 800px; margin: auto; padding: 20px;">
     <h1>Privacy Policy</h1>
-    <p>Your privacy is important to us.</p>
-    <p>It is QuickCashOfferNow's policy to respect your privacy regarding any information we may collect from you across our website, QuickCashOfferNow.com, and other sites we own and operate.</p>
-    <p>... (Add more specific privacy information here, such as data use, cookie policy, third-party sharing, etc.) ...</p>
+    <p>Effective Date: June 2025</p>
+
+    <p>At <strong>QuickCashOfferNow.com</strong>, your privacy is important to us. This Privacy Policy outlines how we collect, use, disclose, and protect your information when you visit our website and submit your information through our forms.</p>
+
+    <h2>1. Information We Collect</h2>
+    <ul>
+        <li>Personal Information: Name, email address, phone number, property address, etc.</li>
+        <li>Device Information: IP address, browser type, operating system, and cookies.</li>
+    </ul>
+
+    <h2>2. How We Use Your Information</h2>
+    <ul>
+        <li>To contact you about your property inquiry.</li>
+        <li>To improve our services and website.</li>
+        <li>To send SMS messages or emails related to your inquiry.</li>
+    </ul>
+
+    <h2>3. Sharing Your Information</h2>
+    <p>We do not sell or rent your information to third parties. We may share your information with trusted service providers who assist us in operating our business and providing our services.</p>
+
+    <h2>4. Your Consent</h2>
+    <p>By submitting your information on our site, you consent to our use of your data as described in this policy. You may opt out at any time by replying STOP to our messages or contacting us directly.</p>
+
+    <h2>5. Data Security</h2>
+    <p>We use industry-standard measures to protect your personal information. However, no method of transmission or storage is 100% secure.</p>
+
+    <h2>6. Changes to This Policy</h2>
+    <p>We may update this Privacy Policy from time to time. The updated version will be posted on this page with a revised effective date.</p>
+
+    <h2>7. Contact Us</h2>
+    <p>If you have any questions or concerns about this Privacy Policy, please contact us at <a href="mailto:Contact@quickcashoffernow.com">Contact@quickcashoffernow.com</a>.</p>
+
+    <hr>
+    <p>&copy; 2025 QuickCashOfferNow.com. All rights reserved.</p>
 </body>
 </html>
